# stilgar

./: .gitignore  Caddyfile.dev  Cargo.toml  dev.kdl
assets/: index.html
migrations/: 20230316104146_DATABASE_CREATION.sql
src/: main.rs  message.rs  state.rs
src/api/: mod.rs  model.rs  room.rs  sensor.rs
src/database/: mod.rs
webapp/: README.md  package-lock.json  package.json  size-plugin.json
webapp/src/routes/home/: index.js
